--- a/templates/ask.html
+++ b/templates/ask.html
@@ -34,10 +34,16 @@
     padding-right: 15px;
     padding-bottom: 55px;
 }
-@media only screen and (max-width: 390px) {
+@media only screen and (max-width: 765px) {
     .question {
     margin-top: 30%;
     margin-left: 7%;
+}
+}
+@media only screen and (max-width: 375px) {
+    .question {
+    margin-top: 30%;
+    margin-left: 5%;
 }
 }
 </style>
