--- a/templates/chat.html
+++ b/templates/chat.html
@@ -139,6 +139,7 @@ textarea.form-control {
                 </div>
             </div>
         </div>
-        <a style="border:2px solid black;background-color: white;margin-bottom: 30px;text-align: center;color: black;font-weight: bold;font-size: medium;"class="btn btn-primary" href="/group">CREATE GROUP</a>
+        <!-- <a style="border:2px solid black;background-color: white;margin-bottom: 30px;text-align: center;color: black;font-weight: bold;font-size: medium;"class="btn btn-primary" href="/group">CREATE GROUP</a> -->
     </div>
 {% endblock %}
+
