--- a/templates/managegroups.html
+++ b/templates/managegroups.html
@@ -52,32 +52,23 @@
 {% include 'navbar.html' %}
     <div class="container text-center">
         <br>
-        <div class="icon">
-            <h2 class="todo">Manage Groups</h2>
-        </div>
-        <br>
         <div class="container-fluid">
             <div class="row justify-content-center" id="banner">
                 <div class="col-md-5 " id="List">
                     <h3>My Groups</h3>
                     <table class="table">
-                        <thead>
-                          <tr>
-                            <th scope="col">Groupname</th>
-                            <th scope="col"></th>
-                            <th scope="col"></th>
-                          </tr>
-                        </thead>
                         <tbody>
                             {% for item in mygroups %}
                             <tr>
-                                <th scope="row">{{ item.groupname }}</th>
+                                <th style="vertical-align:middle;font-size: larger;font-weight: bold;" scope="row">{{ item.groupname }}</th>
                                 <td>
                                   <form  id="list" method="Post">
                                     <div class="mb-3">
                                       <input type="hidden" required name="id" value="{{ item.groupname }}" >
                                     </div>
-                                    <button type="submit" style="border:2px solid black;background-color: red;border-radius: 10px;width: 100px;text-align: center;color: white;font-weight: bold;font-size: small;"class="btn btn-primary">DELETE</button>
+                                    <button type="submit" style="border:0px;background-color: white;text-align: center;color: black;font-weight: bold;font-size: small;"class="btn btn-primary"><svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="bi bi-trash3" viewBox="0 0 16 16">
+                                      <path d="M6.5 1h3a.5.5 0 0 1 .5.5v1H6v-1a.5.5 0 0 1 .5-.5ZM11 2.5v-1A1.5 1.5 0 0 0 9.5 0h-3A1.5 1.5 0 0 0 5 1.5v1H2.506a.58.58 0 0 0-.01 0H1.5a.5.5 0 0 0 0 1h.538l.853 10.66A2 2 0 0 0 4.885 16h6.23a2 2 0 0 0 1.994-1.84l.853-10.66h.538a.5.5 0 0 0 0-1h-.995a.59.59 0 0 0-.01 0H11Zm1.958 1-.846 10.58a1 1 0 0 1-.997.92h-6.23a1 1 0 0 1-.997-.92L3.042 3.5h9.916Zm-7.487 1a.5.5 0 0 1 .528.47l.5 8.5a.5.5 0 0 1-.998.06L5 5.03a.5.5 0 0 1 .47-.53Zm5.058 0a.5.5 0 0 1 .47.53l-.5 8.5a.5.5 0 1 1-.998-.06l.5-8.5a.5.5 0 0 1 .528-.47ZM8 4.5a.5.5 0 0 1 .5.5v8.5a.5.5 0 0 1-1 0V5a.5.5 0 0 1 .5-.5Z"/>
+                                    </svg></button>
                                   </form>
                                 </td>
                                 <td>
@@ -85,7 +76,10 @@
                                       <div class="mb-3">
                                         <input type="hidden" required name="adduserin" value="{{ item.groupname }}" >
                                       </div>
-                                      <button type="submit" style="border:2px solid black;background-color: blue;border-radius: 10px;width: 100px;text-align: center;color: white;font-weight: bold;font-size: small;"class="btn btn-primary">Adduser</button>
+                                      <button type="submit" style="border:0px;background-color: white;text-align: center;color: black;font-weight: bold;font-size: small;"class="btn btn-primary"><svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="bi bi-person-plus" viewBox="0 0 16 16">
+                                        <path d="M6 8a3 3 0 1 0 0-6 3 3 0 0 0 0 6zm2-3a2 2 0 1 1-4 0 2 2 0 0 1 4 0zm4 8c0 1-1 1-1 1H1s-1 0-1-1 1-4 6-4 6 3 6 4zm-1-.004c-.001-.246-.154-.986-.832-1.664C9.516 10.68 8.289 10 6 10c-2.29 0-3.516.68-4.168 1.332-.678.678-.83 1.418-.832 1.664h10z"/>
+                                        <path fill-rule="evenodd" d="M13.5 5a.5.5 0 0 1 .5.5V7h1.5a.5.5 0 0 1 0 1H14v1.5a.5.5 0 0 1-1 0V8h-1.5a.5.5 0 0 1 0-1H13V5.5a.5.5 0 0 1 .5-.5z"/>
+                                      </svg></button>
                                     </form>
                                   </td>
                             </tr>   
@@ -95,5 +89,8 @@
                 </div>
             </div>
         </div>
+        <a style="border:2px solid black;background-color: white;margin-bottom: 30px;text-align: center;color: black;font-weight: bold;font-size: medium;"class="btn btn-primary" href="/group"><svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="bi bi-arrow-left" viewBox="0 0 16 16">
+          <path fill-rule="evenodd" d="M15 8a.5.5 0 0 0-.5-.5H2.707l3.147-3.146a.5.5 0 1 0-.708-.708l-4 4a.5.5 0 0 0 0 .708l4 4a.5.5 0 0 0 .708-.708L2.707 8.5H14.5A.5.5 0 0 0 15 8z"/>
+        </svg></a>
     </div>
 {% endblock %}
