--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -24,13 +24,28 @@
           <a class="nav-link" href="/todo">TODO</a>
         </li>
         <li class="nav-item">
+          <a class="nav-link" ></a>
+        </li>
+        <li class="nav-item">
           <a class="nav-link" href="/chat">CHAT</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="/ask">LOGOUT</a>
+          <a class="nav-link" ></a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="/group">CREAT GROUP</a>
         </li>
       </ul>
       <ul class="navbar-nav pull-right">
+        <li class="nav-item">
+          <a class="nav-link" href="/ask">LOGOUT</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" ></a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" ></a>
+        </li>
         <h1><a class="navbar-brand">{{username}}</a></h1>
       </ul>
     </div>
