--- a/templates/managegroups.html
+++ b/templates/managegroups.html
@@ -88,6 +88,29 @@
                     </table>
                 </div>
             </div>
+            <div class="container-fluid">
+              <div class="row justify-content-center" id="banner">
+                <div class="col-md-5 " id="List">
+                  <h3>Member of Groups</h3>
+                  <table class="table">
+                      <tbody>
+                          {% for item in ingroups %}
+                          <tr>
+                              <th style="vertical-align:middle;font-size: larger;font-weight: bold;" scope="row">{{ item.groupname }}</th>
+                              <td>
+                                <form  id="list" method="Post">
+                                  <div class="mb-3">
+                                    <input type="hidden" required name="left" value="{{ item.groupname }}" >
+                                  </div>
+                                  <button type="submit" style="border:2px;background-color: red;text-align: center;color: white;font-weight: bold;font-size: small;"class="btn btn-primary">LEFT</button>
+                                </form>
+                              </td>
+                          </tr>   
+                          {% endfor %}
+                      </tbody>
+                  </table>
+              </div>
+            </div>
         </div>
         <a style="border:2px solid black;background-color: white;margin-bottom: 30px;text-align: center;color: black;font-weight: bold;font-size: medium;"class="btn btn-primary" href="/group"><svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="bi bi-arrow-left" viewBox="0 0 16 16">
           <path fill-rule="evenodd" d="M15 8a.5.5 0 0 0-.5-.5H2.707l3.147-3.146a.5.5 0 1 0-.708-.708l-4 4a.5.5 0 0 0 0 .708l4 4a.5.5 0 0 0 .708-.708L2.707 8.5H14.5A.5.5 0 0 0 15 8z"/>
