--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -21,6 +21,9 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
         <li class="nav-item">
+          <a class="nav-link" ></a>
+        </li>
+        <li class="nav-item">
           <a class="nav-link" href="/todo">TODO</a>
         </li>
         <li class="nav-item">
@@ -33,7 +36,25 @@
           <a class="nav-link" ></a>
         </li>
         <li class="nav-item">
+          <a class="nav-link" href="/groups">GROUP CHAT</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" ></a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="/managegroups">MANAGE GROUPS</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" ></a>
+        </li>
+        <li class="nav-item">
           <a class="nav-link" href="/group">CREAT GROUP</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" ></a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="/groupchat">GROUP</a>
         </li>
       </ul>
       <ul class="navbar-nav pull-right">
