--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -36,7 +36,7 @@
           <a class="nav-link" ></a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="/groups">GROUP CHAT</a>
+          <a class="nav-link" href="/creatgroup">CREAT GROUP</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" ></a>
@@ -48,13 +48,7 @@
           <a class="nav-link" ></a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="/group">CREAT GROUP</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" ></a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="/groupchat">GROUP</a>
+          <a class="nav-link" href="/groupchat">GROUP CHAT</a>
         </li>
       </ul>
       <ul class="navbar-nav pull-right">
