--- a/templates/groupchat.html
+++ b/templates/groupchat.html
@@ -1,21 +1,59 @@
 <style>
     body {
-		background-image: url("/static/chat\ wall.jpg");
+        background-image: url("/static/chat\ wall.jpg");
 }
-.form textarea {
-	border: 2px solid black;
+.ChatRoom {
+    color: white;
+}
+#Users{
+    background-color: white;
+    margin-bottom: 50px;
+    margin-right: -3%;
+    border-top-left-radius: 10px;
+    border-bottom-left-radius: 10px;  
+    overflow-y:scroll;
+    height:520px;
+    padding-right: 0px;
+    padding-left: 0px;
+
+}
+
+textarea.form-control {
+    min-height: calc(1.5em + 0.75rem + 2px);
+    border-radius: 0px;
+}
+.textform textarea {
 	border-radius: 0px;
-	width: 90%;
-	height: 45px;
+	width: 440px;
+	height: 46px;
 }
-.form button {
-	background-color: white;
-	font-weight: bold;
-	color: black;
-	border: 2px solid black;
-	margin-top: -52px;
-	margin-left: 91%;
-	border-radius: 5px;
+
+@media only screen and (max-width: 765px) {
+    #Users {
+        position: absolute;
+        left: 0;
+        width: 160px;
+        height: 500px;
+    }
+    .textform textarea {
+	width: 210px;
+    }
+    .textform button {
+        position: absolute;
+        right: 0;
+    }
+}
+@media only screen and (max-width: 375px) {
+    #Users {
+        width: 102px;
+    }
+    
+}
+@media only screen and (max-width: 390px) {
+    #Users {
+        width: 110px;
+    }
+    
 }
 
 </style>
@@ -23,57 +61,83 @@
 {% extends "base.html" %}
 
 {% block title %}
-<title>Group Chat</title>
 <link rel="stylesheet" href="/static/chat.css">
 {% endblock %}
 
 {% block contant %}
 {% include 'navbar.html' %}
-
-<div class="container text-center">
-</div>
-<br>
-<div id="container">
-	<main>
-		<header>
-			<div>
-				<h2>GROUP CHAT</h2>
-			</div>
-		</header>
-		<ul id="chat">
-			{% for item in zxc %}
-			{% if item.by == username %}
-				<li class="me">
-					<div class="message">
-						{{item.message}}
-					</div>
-					<div class="entete">
-						<h3>{{item.created_at}}</h3>
-					</div>
-				</li>
-			{% endif %}
-			{% if item.by != username %}
-				<li class="you">
-					<div class="entete">
-						<h2>{{item.by}}</h2>
-					</div>
-					<div class="message">
-						{{item.message}}
-					</div>
-					<div class="entete">
-						<h3>{{item.created_at}}</h3>
-					</div>
-				</li>
-			{% endif %}
-			{% endfor %}
-		</ul>
-		<form method="POST" class="form">
-			<div class="mb-3">
-				<textarea class="form-control" required name="message" placeholder="Enter the text"></textarea>
-			</div>
-			<button type="btn btn-primary" class="sbt">Send</button>
-			<!-- style="background-color: white;font-weight: bold;color: black;border: 2px solid black;margin-top: -52px;margin-left: 90%;border-radius: 5px;"  -->
-		</form>
-	</main>
-</div>
+    <div class="container text-center">
+        <br>
+        <div class="icon">
+            <h2 class="ChatRoom">CHAT</h2>
+        </div>
+        <br>
+        <div class="container-fluid">
+            <div class="row justify-content-center" id="banner">
+                <div class="col-md-2 " id="Users">
+                    <table class="table table-striped">
+                        <tbody>
+                            {% for item in ingroups %}
+                            <tr>
+                                <form method="POST" class="but">
+                                    <div class="mb-3">
+                                        <input type="hidden" required name="groupname" value="{{item.groupname}}" >
+                                    </div>
+                                    <td style="align-self:middle;">
+                                        <button type="submit" style="border:0px;background-color: transparent;text-align: center;color: black;font-weight: bold;font-size: large;"class="btn btn-primary"> {{item.groupname}}</button>
+                                    </td>
+                                </form>
+                            </tr>   
+                            {% endfor %}
+                        </tbody>
+                    </table>
+                </div>
+                <div class="col-md-6 " >
+                <div id="container">
+                    <main>
+                        <header>
+                            <div >
+                                {% for item in is_for %}
+                                    <h2 style="position: relative;left:-90px">{{item.groupname}}</h2>
+                                {% endfor %}
+                            </div>
+                        </header>
+                        <ul id="chat">
+                            {% for item in zxc %}
+                            {% if item.by == username %}
+                                <li class="me">
+                                    <div class="message">
+                                        {{item.message}}
+                                    </div>
+                                    <div class="entete">
+                                        <h3>{{item.created_at}}</h3>
+                                    </div>
+                                </li>
+                            {% endif %}
+                            {% if item.by != username %}
+                                <li class="you">
+                                    <div class="message">
+                                        {{item.message}}
+                                    </div>
+                                    <div class="entete">
+                                        <h3>{{item.created_at}}</h3>
+                                    </div>
+                                </li>
+                            {% endif %}
+                            {% endfor %}
+                        </ul>
+                        <form  method="POST" class="textform">
+                            <div class="mb-3">
+                                <input type="hidden" required name="to" value="{{to}}">
+                                <textarea class="form-control" required name="message" placeholder="Enter the text"></textarea>
+                            </div>
+                            <button style="background-color: white;font-weight: bold;color: black;border: 2px solid black;margin-top: -55px;margin-left: 87%;border-radius: 5px;" type="btn btn-primary" class="sbt">Send</button>
+                        </form>
+                    </main>
+                </div>
+                </div>
+            </div>
+        </div>
+    </div>
 {% endblock %}
+
