--- a/templates/home.html
+++ b/templates/home.html
@@ -70,6 +70,7 @@
             <ul>{{item.description}}</ul>
             {% endfor %}
         </div>
+        <div class="col-md-1 "></div>
         <div class="col-md-4 " id="New">
             <h3>New Messages</h3>
             {% for item in text_in_private %}
