--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -61,7 +61,7 @@
         <li class="nav-item">
           <a class="nav-link" ></a>
         </li>
-        <h1><a class="navbar-brand">{{username}}</a></h1>
+        <a class="navbar-brand">{{username}}</a>
       </ul>
     </div>
   </div>
