--- a/templates/login.html
+++ b/templates/login.html
@@ -2,12 +2,16 @@
     body {
         background-image: url("/static/chat\ wall.jpg");
 }
+.alert-danger {
+    width: 250;
+    margin-left: 19%;
+}
 
 .login-form{
     width: 250px;
     height: 400px;
     margin-top: 30px;
-    margin-left: 39%;
+    margin-left: 19%;
     border-radius: 10px;
     padding: 25px;
     border: 2px solid black;
@@ -51,27 +55,33 @@
 
 {% block contant %}
 <div class="container text-center">
-    {% if msg %}
-        <div class="alert alert-success" role="alert">
-            {{msg}}
+    <div class="container-fluid">
+        <div class="row justify-content-center" id="banner">
+            <div class="col-md-5 " id="Creat">
+                {% if msg %}
+                    <div class="alert alert-success" role="alert">
+                        {{msg}}
+                    </div>
+                {% endif %}
+                {% for error in errors %}
+                    <div class="alert alert-danger" role="alert">
+                        {{ error }}
+                    </div>
+                {% endfor %}
+                <form method="POST" class="login-form">
+                    <h1>Login Here</h1>
+                    <div class="mb-3">
+                        <input type="email" required class="form-control" name="username" aria-describedby="emailHelp" placeholder="Email">
+                        <input type="password" required class="form-control" name="password" placeholder="Password ">
+                    </div>
+                    <br>
+                    <button type="submit" style="border:2px solid black;background-color: white;border-radius: 2px;width: 150px;text-align: center;color: black;font-weight: bold;font-size: large;"class="btn btn-primary">LOGIN</button>
+                    <br>
+                    <p class="link">Don't have an account<br>
+                    <a href="/signup">SIGNUP</a> here</a></p>
+                </form>
+            </div>
         </div>
-    {% endif %}
-    {% for error in errors %}
-        <div class="alert alert-danger" role="alert">
-            {{ error }}
-        </div>
-    {% endfor %}
-    <form method="POST" class="login-form">
-        <h1>Login Here</h1>
-        <div class="mb-3">
-            <input type="email" required class="form-control" name="username" aria-describedby="emailHelp" placeholder="Email">
-            <input type="password" required class="form-control" name="password" placeholder="Password ">
-        </div>
-        <br>
-        <button type="submit" style="border:2px solid black;background-color: white;border-radius: 2px;width: 150px;text-align: center;color: black;font-weight: bold;font-size: large;"class="btn btn-primary">LOGIN</button>
-        <br>
-        <p class="link">Don't have an account<br>
-        <a href="/signup">SIGNUP</a> here</a></p>
-    </form>
+    </div>
 </div>
 {% endblock %}
