--- a/templates/signup.html
+++ b/templates/signup.html
@@ -3,11 +3,15 @@
     body {
         background-image: url("/static/chat\ wall.jpg");
 }
+.alert-danger {
+    width: 250;
+    margin-left: 19%;
+}
     .signup-form{
     width: 250px;
     height: 400px;
     margin-top: 30px;
-    margin-left: 39%;
+    margin-left: 19%;
     border-radius: 10px;
     padding: 25px;
     border: 2px solid black;
@@ -49,28 +53,34 @@
 
 {% extends "base.html" %}
 {% block contant %}
-    <div class="container text-center">
-        {% if msg %}
-            <div class="alert alert-success" role="alert">
-                {{msg}}
+<div class="container text-center">
+    <div class="container-fluid">
+        <div class="row justify-content-center" id="banner">
+            <div class="col-md-5 " id="Creat">
+                {% if msg %}
+                    <div class="alert alert-success" role="alert">
+                        {{msg}}
+                    </div>
+                {% endif %} 
+                {% for error in errors %}
+                    <div class="alert alert-danger" role="alert">
+                        {{ error }}
+                    </div>
+                {% endfor %}
+                <form  method="POST" class="signup-form">
+                    <h1>Signup Here</h1>
+                    <div class="mb-3">
+                        <input type="email" required class="form-control" name="email" aria-describedby="emailHelp" placeholder="Email">
+                        <input type="password" required class="form-control" name="password" placeholder="Password">
+                    </div>
+                    <br>
+                    <button type="submit" style="border:2px solid black;background-color: white;border-radius: 2px;width: 150px;text-align: center;color: black;font-weight: bold;font-size: large;"class="btn btn-primary">Registor</button>
+                    <br>
+                    <p class="link">Already have an account<br>
+                    <a href="/">LOGIN</a> here</a></p>
+                </form>
             </div>
-        {% endif %} 
-        {% for error in errors %}
-            <div class="alert alert-danger" role="alert">
-                {{ error }}
-            </div>
-        {% endfor %}
-        <form  method="POST" class="signup-form">
-            <h1>Signup Here</h1>
-            <div class="mb-3">
-                <input type="email" required class="form-control" name="email" aria-describedby="emailHelp" placeholder="Email">
-                <input type="password" required class="form-control" name="password" placeholder="Password">
-            </div>
-            <br>
-            <button type="submit" style="border:2px solid black;background-color: white;border-radius: 2px;width: 150px;text-align: center;color: black;font-weight: bold;font-size: large;"class="btn btn-primary">Registor</button>
-            <br>
-            <p class="link">Already have an account<br>
-            <a href="/">LOGIN</a> here</a></p>
-        </form>
+        </div>
     </div>
+</div> 
 {% endblock %}
