--- a/templates/chat.html
+++ b/templates/chat.html
@@ -140,7 +140,7 @@ textarea.form-control {
                         <form  method="POST" class="textform">
                             <div class="mb-3">
                                 <input type="hidden" required name="to" value="{{to}}">
-                                <input id= "text" type="text" class="form-control" required name="message" placeholder="Enter the text">
+                                <input id= "text" type="text" autofocus="autofocus" class="form-control" required name="message" placeholder="Enter the text">
                             </div>
                             <button id= "button" type="btn btn-primary" class="sbt">Send</button>
                         </form>
