--- a/templates/home.html
+++ b/templates/home.html
@@ -70,14 +70,14 @@
             <ul>{{item.description}}</ul>
             {% endfor %}
         </div>
-        <div class="col-md-1 "></div>
-        <div class="col-md-4 " id="New">
+        <!-- <div class="col-md-1 "></div> -->
+        <!-- <div class="col-md-4 " id="New">
             <h3>New Messages</h3>
             {% for item in text_in_private %}
             <li>{{item.by}}</li>
             <ul>{{item.message}}</ul>
             {% endfor %}
-        </div>
+        </div> -->
     </div>
 </div>
 {% endblock %}
