--- a/templates/base.html
+++ b/templates/base.html
@@ -15,6 +15,21 @@
         background-color: white;
         border-radius: 30px;
     }
+
+
+@media only screen and (max-width: 765px) {
+    .logo {
+        margin-top: 50px;
+        margin-left: 22%;
+    }
+    .appinfo {
+        margin-top: 35px;
+        margin-left: 0%;
+        margin-bottom: 50px;
+        width:fit-content;
+    }
+}
+
 @media only screen and (max-width: 390px) {
     .logo {
         margin-top: 50px;
@@ -27,16 +42,14 @@
         width:fit-content;
     }
 }
-@media only screen and (max-width: 765px) {
+
+@media only screen and (max-width: 320px) {
     .logo {
-        margin-top: 50px;
-        margin-left: 22%;
+        margin-top: 20px;
+        margin-left: 17%;
     }
     .appinfo {
-        margin-top: 35px;
-        margin-left: 0%;
-        margin-bottom: 50px;
-        width:fit-content;
+        margin-top: 20px;
     }
 }
 </style>
