--- a/templates/login.html
+++ b/templates/login.html
@@ -48,6 +48,13 @@
         margin-left: 15%;
     }
 }
+@media screen and (max-width: 320px)
+{
+    .login-form{
+        margin-top: -35px;
+        margin-left: 4%;
+    }
+}
  
 </style>
 
