--- a/templates/base.html
+++ b/templates/base.html
@@ -16,6 +16,18 @@
         border-radius: 30px;
     }
 
+    @media only screen and (max-width: 1024px) {
+    .logo {
+        margin-top: 50px;
+        margin-left: 40%;
+    }
+    .appinfo {
+        margin-top: 35px;
+        margin-left: 30%;
+        margin-bottom: 50px;
+        width:fit-content;
+    }
+}
 
 @media only screen and (max-width: 765px) {
     .logo {
@@ -26,6 +38,16 @@
         margin-top: 35px;
         margin-left: 0%;
         margin-bottom: 50px;
+        width:fit-content;
+    }
+}
+@media only screen and (max-width: 425px) {
+    .logo {
+        margin-top: 15px;
+        margin-left: 23%;
+    }
+    .appinfo {
+        margin-top: 30px;
         width:fit-content;
     }
 }
