--- a/templates/groupchat.html
+++ b/templates/groupchat.html
@@ -33,6 +33,19 @@ textarea.form-control {
 	width: 440px;
 	height: 46px;
 }
+@media only screen and (max-width: 1440px) {
+    #Users {
+        position: absolute;
+        left: 16%;
+    }
+}
+
+@media only screen and (max-width: 1024px) {
+    #Users {
+        position: absolute;
+        left: 11.7%;
+    }
+}
 
 @media only screen and (max-width: 765px) {
     #Users {
@@ -48,6 +61,19 @@ textarea.form-control {
         position: absolute;
         right: 0;
     }
+}
+@media only screen and (max-width: 425px) {
+    #Users {
+        width: 102px;
+    }
+    #text {
+        width: 52%;
+    }
+    #button {
+        width: 18%;
+        height: 10%;
+    }
+    
 }
 @media only screen and (max-width: 375px) {
     #Users {
