--- a/templates/login.html
+++ b/templates/login.html
@@ -48,6 +48,17 @@
         margin-left: 15%;
     }
 }
+@media screen and (max-width: 425px)
+{
+    .login-form{
+        margin-top: -10px;
+        margin-left: 15%;
+    }
+    .alert-danger {
+    margin-left: 15%;
+    margin-top: -40px;
+    }
+}
 @media screen and (max-width: 320px)
 {
     .login-form{
