--- a/static/chat.css
+++ b/static/chat.css
@@ -91,7 +91,7 @@ main header > *{
 	border-radius:10px;
 }
 
-@media only screen and (max-width: 1440px) {
+@media only screen and (min-width: 1440px) {
     #container {
         width: 600px;
 		height: 520px;
