--- a/templates/groupchat.html
+++ b/templates/groupchat.html
@@ -33,7 +33,7 @@ textarea.form-control {
 	width: 440px;
 	height: 46px;
 }
-@media only screen and (max-width: 1440px) {
+@media only screen and (min-width: 1440px) {
     #Users {
         position: absolute;
         left: 16%;
